[package]
name = "skull-core"
version = "0.1.0"
authors = ["Robert Ying <rbtying@aeturnalus.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
rand_distr = "0.3.0"
serde_json = "1.0"
